feat: add saved filters with $name expansion syntax

--- a/src/config_template.toml
+++ b/src/config_template.toml
@@ -14,3 +14,13 @@
 # Press a number key to filter by that tag; type #1-#0 to auto-expand
 # Default: ["feature", "bug", "idea"]
 # favorite_tags = ["feature", "bug", "idea", "refactor", "docs"]
+
+# Saved filters - use $name in filter queries to expand
+# Example: typing "$t #work" expands to "!tasks #work"
+# Default: t = "!tasks", n = "!notes", e = "!events"
+# [filters]
+# t = "!tasks"
+# n = "!notes"
+# e = "!events"
+# someday = "!tasks #someday"
+# stale = "!tasks @before:-7d"
