refactor: rename sort to tidy with T keybinding
- Rename sort_entries to tidy_entries (key: s → T)
- Rename config sort_order to tidy_order
- Update tests and documentation

--- a/src/registry/keys.toml
+++ b/src/registry/keys.toml
@@ -204,13 +204,13 @@ short_description = "Toggle hide completed"
 long_description = "Toggle visibility of completed tasks"
 
 [[keys]]
-id = "sort_entries"
-key = "s"
+id = "tidy_entries"
+key = "T"
 modes = ["daily_normal"]
 help_sections = ["daily"]
-short_text = "Sort"
-short_description = "Sort entries"
-long_description = "Sort entries by type and completion status"
+short_text = "Tidy"
+short_description = "Tidy entries"
+long_description = "Tidy entries into pre-configured order by type"
 
 [[keys]]
 id = "enter_reorder_mode"
