feat: add project registry with picker and auto-init
Implement a project registry for tracking multiple projects with:
- Registry stored at ~/.config/caliber/projects.toml
- Project picker popup (Ctrl+p) with fuzzy filtering
- Commands: :project init, :project remove [id], :project <id>
- Auto-init projects in git repos when auto_init_project=true (default)
- Hidden projects via hidden=true in project config
- Footer shows [PROJECT_ID] when viewing project journal
- Non-git project support (falls back to cwd)

--- a/src/registry/commands.toml
+++ b/src/registry/commands.toml
@@ -32,3 +32,13 @@ name = "quit"
 help = "Quit application"
 readme = "Save and exit the application."
 completion_hint = "Save and exit the application."
+
+[[command]]
+name = "project"
+args = "[init|remove|<id>]"
+subargs = [
+  { options = ["init", "remove"] },
+]
+help = "Manage projects"
+readme = "Manage projects. `init` creates and registers project in current folder, `remove` unregisters current or specified project, `<id>` switches to registered project."
+completion_hint = "Manage projects: init, remove, or project ID to switch"
