--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ crossterm = "0.28"
 chrono = "0.4"
 dirs = "6.0"
 toml = "0.8"
+toml_edit = "0.22"
 serde = { version = "1.0", features = ["derive"] }
 unicode-width = "0.2"
 regex = "1"
