--- a/src/registry/actions.toml
+++ b/src/registry/actions.toml
@@ -279,6 +279,14 @@ help_sections = ["daily", "filter"]
 help = "Open datepicker"
 readme = "Open the calendar datepicker to navigate to a specific date"
 
+[[action]]
+key_action_id = "open_project_picker"
+default_keys = ["C-p"]
+contexts = ["shared_normal"]
+help_sections = ["daily", "filter"]
+help = "Open project picker"
+readme = "Open the project picker to switch between registered projects"
+
 # =============================================================================
 # Filter Normal Mode
 # =============================================================================
