refactor: regex-based grouped hints and unified autocomplete
Replace hardcoded weekday entries with grouped hints using values/pattern
fields in registry. Tab now autocompletes in edit mode (Down for save+new).
Allow +/- suffix in Entry context for explicit past dates.

- Add values field for enumerated groups ([mon-sun], every-[mon-sun])
- Add pattern field for regex validation (d[1-999], every-[1-31])
- Move hint rendering logic to HintContext methods
- Simplify ui/hints.rs by using new methods

--- a/src/registry/actions.toml
+++ b/src/registry/actions.toml
@@ -331,8 +331,17 @@ help = "Save and exit"
 readme = "Save the entry and exit edit mode"
 
 [[action]]
-key_action_id = "save_and_new"
+key_action_id = "autocomplete"
 default_keys = ["tab"]
+contexts = ["edit"]
+help_sections = ["edit"]
+footer = { modes = ["edit"], text = "Complete" }
+help = "Autocomplete hint"
+readme = "Accept the current autocomplete hint and continue editing"
+
+[[action]]
+key_action_id = "save_and_new"
+default_keys = ["down"]
 contexts = ["edit"]
 help_sections = ["edit"]
 footer = { modes = ["edit"], text = "Save+new" }
