--- a/src/registry/date_values.toml
+++ b/src/registry/date_values.toml
@@ -1,17 +1,19 @@
 # Date value definitions for autocomplete
 # Used in entry @dates and filter @before:/@after: values
+#
+# Fields:
+# - syntax: Identifier for the entry (used for display grouping)
+# - display: What appears in hint overlay
+# - scopes: Where this date value is valid ["entry", "filter"]
+# - values: (optional) Enumerated valid completions - input matches if prefix of any value
+# - pattern: (optional) Regex for validation - input matches if it could complete to match
+# - help: Short help text
+# - readme: Text for README (empty = skip)
+# - completion_hint: Description shown during autocomplete
 
 # =============================================================================
-# Relative Dates (entry + filter)
+# Literal Dates (simple prefix matching against syntax)
 # =============================================================================
-
-[[date_value]]
-syntax = "d"
-display = "d"
-scopes = ["entry", "filter"]
-help = "Relative days"
-readme = "Relative day offsets (d1, d7, d30)."
-completion_hint = "Relative days (d1, d7, d30). Use + suffix in filters for future."
 
 [[date_value]]
 syntax = "today"
@@ -37,78 +39,50 @@ help = "Yesterday"
 readme = "Yesterday's date."
 completion_hint = "Yesterday's date."
 
-[[date_value]]
-syntax = "mon"
-display = "mon"
-scopes = ["entry", "filter"]
-help = "Monday"
-readme = "Monday."
-completion_hint = "Monday. In entries: next Monday. In filters: use + for future."
+# =============================================================================
+# Grouped Dates (values-based matching)
+# =============================================================================
 
 [[date_value]]
-syntax = "tue"
-display = "tue"
+syntax = "[mon-sun]"
+display = "[mon-sun]"
+values = ["mon", "tue", "wed", "thu", "fri", "sat", "sun"]
 scopes = ["entry", "filter"]
-help = "Tuesday"
-readme = "Tuesday."
-completion_hint = "Tuesday. In entries: next Tuesday. In filters: use + for future."
+help = "Day of week"
+readme = "Day of week (mon, tue, wed, thu, fri, sat, sun)."
+completion_hint = "Day of week. In entries: next occurrence. In filters: use +/- for direction."
+
+# =============================================================================
+# Pattern-based Dates (regex validation)
+# =============================================================================
 
 [[date_value]]
-syntax = "wed"
-display = "wed"
+syntax = "d[1-999]"
+display = "d[1-999]"
+pattern = "^d[1-9][0-9]{0,2}$"
 scopes = ["entry", "filter"]
-help = "Wednesday"
-readme = "Wednesday."
-completion_hint = "Wednesday. In entries: next Wednesday. In filters: use + for future."
-
-[[date_value]]
-syntax = "thu"
-display = "thu"
-scopes = ["entry", "filter"]
-help = "Thursday"
-readme = "Thursday."
-completion_hint = "Thursday. In entries: next Thursday. In filters: use + for future."
-
-[[date_value]]
-syntax = "fri"
-display = "fri"
-scopes = ["entry", "filter"]
-help = "Friday"
-readme = "Friday."
-completion_hint = "Friday. In entries: next Friday. In filters: use + for future."
-
-[[date_value]]
-syntax = "sat"
-display = "sat"
-scopes = ["entry", "filter"]
-help = "Saturday"
-readme = "Saturday."
-completion_hint = "Saturday. In entries: next Saturday. In filters: use + for future."
-
-[[date_value]]
-syntax = "sun"
-display = "sun"
-scopes = ["entry", "filter"]
-help = "Sunday"
-readme = "Sunday."
-completion_hint = "Sunday. In entries: next Sunday. In filters: use + for future."
+help = "Relative days"
+readme = "Relative day offsets (d1, d7, d30)."
+completion_hint = "Relative days (d1, d7, d30). Use +/- suffix for direction."
 
 # =============================================================================
 # Recurring Patterns (entry only)
 # =============================================================================
 
 [[date_value]]
-syntax = "@every-"
+syntax = "every-[mon-sun]"
+display = "@every-[mon-sun]"
+values = ["every-mon", "every-tue", "every-wed", "every-thu", "every-fri", "every-sat", "every-sun"]
+scopes = ["entry"]
+help = "Recurring day of week"
+readme = "Recurring on a specific day of week (@every-mon, @every-tue, etc.)."
+completion_hint = "Recurring on day of week (@every-mon through @every-sun)."
+
+[[date_value]]
+syntax = "every-[1-31]"
 display = "@every-[1-31]"
+pattern = "^every-([1-9]|[12][0-9]|3[01])$"
 scopes = ["entry"]
 help = "Recurring day of month"
 readme = "Recurring on a specific day of month (@every-1, @every-15, etc.)."
 completion_hint = "Recurring on day of month (@every-1 through @every-31)."
-
-[[date_value]]
-syntax = "@every-mon"
-display = "@every-[day]"
-scopes = ["entry"]
-help = "Recurring day of week"
-readme = "Recurring on a specific day of week (@every-mon, @every-tue, etc.)."
-completion_hint = "Recurring on day of week (@every-mon, @every-tue, @every-wed, etc.)."
