feat: add @on:DATE filter for single-day filtering
- Add @on: filter that sets both before and after to same date
- Derive date value hints dynamically from filter syntax
- Add test for @on: filter behavior

--- a/src/registry/date_values.toml
+++ b/src/registry/date_values.toml
@@ -1,5 +1,5 @@
 # Date value definitions for autocomplete
-# Used in entry @dates and filter @before:/@after: values
+# Used in entry @dates and filter @on:/@before:/@after: values
 #
 # Fields:
 # - syntax: Identifier for the entry (used for display grouping)
