refactor: centralize documentation in registry
- Add help_entries.toml for documentation-only entries
- Generate [Date Syntax] section in help overlay and README
- Add every-day and every-weekday to date_values for autocomplete
- Change "Toggle entry type" to "Cycle entry type" in edit mode

--- a/src/registry/actions.toml
+++ b/src/registry/actions.toml
@@ -354,7 +354,7 @@ default_keys = ["S-tab"]
 contexts = ["edit"]
 help_sections = ["edit"]
 footer = { modes = ["edit"], text = "Type" }
-help = "Toggle entry type"
+help = "Cycle entry type"
 readme = "Cycle through entry types (task, note, event)"
 
 [[action]]
