feat: add tag interface for filtering and managing tags
Add a new tag interface (`,` key) that displays all tags in the journal
with occurrence counts. Users can filter by tag, or delete/rename tags
across the entire journal.

Key changes:
- New tag interface with search, select, delete, and rename operations
- Unified interface handling via ListInterface trait and shared helpers
- Refactored handlers to use centralized interface dispatch
- New tag_ops module for journal-wide tag modifications
- Tests verify rendered output (footer) instead of internal state

New keybindings:
- `,` toggles tag interface in daily/filter views
- `d` deletes selected tag (with confirmation)
- `r` renames selected tag
- Enter filters by selected tag
- Tab toggles focus between list and search input

--- a/src/registry/actions.toml
+++ b/src/registry/actions.toml
@@ -289,6 +289,14 @@ help_sections = ["daily", "filter"]
 help = "Toggle project interface"
 readme = "Toggle the project interface for switching projects"
 
+[[action]]
+key_action_id = "toggle_tag_interface"
+default_keys = [","]
+contexts = ["shared_normal", "tag_interface"]
+help_sections = ["daily", "filter"]
+help = "Toggle tag interface"
+readme = "Toggle the tag interface for managing tags"
+
 # =============================================================================
 # Filter Normal Mode
 # =============================================================================
@@ -515,7 +523,129 @@ help = "Scroll up"
 readme = "Scroll the help content up"
 
 # =============================================================================
-# Date Interface Mode
+# Unified Interface Actions (shared across all interfaces)
+# =============================================================================
+
+[[action]]
+key_action_id = "interface_move_up"
+default_keys = ["up", "k"]
+contexts = ["date_interface", "project_interface", "tag_interface"]
+help_sections = ["date", "project", "tag"]
+help = "Move up"
+readme = "Move selection up (when list/calendar focused)"
+
+[[action]]
+key_action_id = "interface_move_down"
+default_keys = ["down", "j"]
+contexts = ["date_interface", "project_interface", "tag_interface"]
+help_sections = ["date", "project", "tag"]
+help = "Move down"
+readme = "Move selection down (when list/calendar focused)"
+
+[[action]]
+key_action_id = "interface_move_left"
+default_keys = ["left", "h"]
+contexts = ["date_interface", "project_interface", "tag_interface"]
+help_sections = ["date"]
+help = "Move left"
+readme = "Move left in calendar (date interface only, when calendar focused)"
+
+[[action]]
+key_action_id = "interface_move_right"
+default_keys = ["right", "l"]
+contexts = ["date_interface", "project_interface", "tag_interface"]
+help_sections = ["date"]
+help = "Move right"
+readme = "Move right in calendar (date interface only, when calendar focused)"
+
+[[action]]
+key_action_id = "interface_toggle_focus"
+default_keys = ["tab"]
+contexts = ["date_interface", "project_interface", "tag_interface"]
+help_sections = ["date", "project", "tag"]
+footer = { modes = ["date_interface", "project_interface", "tag_interface"], text = "Focus" }
+help = "Toggle focus"
+readme = "Toggle focus between list/calendar and input field"
+
+[[action]]
+key_action_id = "interface_submit"
+default_keys = ["ret"]
+contexts = ["date_interface", "project_interface", "tag_interface"]
+help_sections = ["date", "project", "tag"]
+footer = { modes = ["date_interface", "project_interface", "tag_interface"], text = "Submit" }
+help = "Submit/Select"
+readme = "Submit selection or autocomplete (context-aware)"
+
+[[action]]
+key_action_id = "interface_delete"
+default_keys = ["d"]
+contexts = ["project_interface", "tag_interface"]
+help_sections = ["project", "tag"]
+footer = { modes = ["project_interface", "tag_interface"], text = "Delete" }
+help = "Delete/Remove"
+readme = "Delete tag or remove project (when list focused)"
+
+[[action]]
+key_action_id = "interface_rename"
+default_keys = ["r"]
+contexts = ["tag_interface"]
+help_sections = ["tag"]
+footer = { modes = ["tag_interface"], text = "Rename" }
+help = "Rename tag"
+readme = "Rename tag throughout journal (when list focused)"
+
+[[action]]
+key_action_id = "interface_hide"
+default_keys = ["H"]
+contexts = ["project_interface"]
+help_sections = ["project"]
+footer = { modes = ["project_interface"], text = "Hide" }
+help = "Hide project"
+readme = "Hide project from registry (when list focused)"
+
+[[action]]
+key_action_id = "interface_next_month"
+default_keys = ["]"]
+contexts = ["date_interface"]
+help_sections = ["date"]
+help = "Next month"
+readme = "Navigate to next month (when calendar focused)"
+
+[[action]]
+key_action_id = "interface_prev_month"
+default_keys = ["["]
+contexts = ["date_interface"]
+help_sections = ["date"]
+help = "Previous month"
+readme = "Navigate to previous month (when calendar focused)"
+
+[[action]]
+key_action_id = "interface_next_year"
+default_keys = ["}"]
+contexts = ["date_interface"]
+help_sections = ["date"]
+help = "Next year"
+readme = "Navigate to next year (when calendar focused)"
+
+[[action]]
+key_action_id = "interface_prev_year"
+default_keys = ["{"]
+contexts = ["date_interface"]
+help_sections = ["date"]
+help = "Previous year"
+readme = "Navigate to previous year (when calendar focused)"
+
+[[action]]
+key_action_id = "interface_today"
+default_keys = ["t"]
+contexts = ["date_interface"]
+help_sections = ["date"]
+footer = { modes = ["date_interface"], text = "Today" }
+help = "Go to today"
+readme = "Navigate to today's date (when calendar focused)"
+
+# =============================================================================
+# Date Interface Mode (Legacy - to be removed)
 # =============================================================================
 
 [[action]]
@@ -650,14 +780,43 @@ help = "Hide project"
 readme = "Hide the selected project from the registry interface"
 
 # =============================================================================
+# Tag Interface Mode
+# =============================================================================
+
+[[action]]
+key_action_id = "tag_interface_move_up"
+default_keys = ["up", "k"]
+contexts = ["tag_interface"]
+help_sections = ["tag"]
+help = "Previous tag"
+readme = "Move selection to the previous tag"
+
+[[action]]
+key_action_id = "tag_interface_move_down"
+default_keys = ["down", "j"]
+contexts = ["tag_interface"]
+help_sections = ["tag"]
+help = "Next tag"
+readme = "Move selection to the next tag"
+
+[[action]]
+key_action_id = "tag_interface_select"
+default_keys = ["ret"]
+contexts = ["tag_interface"]
+help_sections = ["tag"]
+footer = { modes = ["tag_interface"], text = "Filter" }
+help = "Filter by tag"
+readme = "Apply quick filter for the selected tag"
+
+# =============================================================================
 # Unified Cancel Action
 # =============================================================================
 
 [[action]]
 key_action_id = "cancel"
 default_keys = ["esc"]
-contexts = ["edit", "reorder", "selection", "filter_normal", "filter_prompt", "command_prompt", "date_interface", "project_interface", "help"]
-help_sections = ["edit", "reorder", "selection", "filter", "date", "project"]
-footer = { modes = ["edit", "reorder", "selection", "normal_filter", "date_interface", "project_interface"], text = "Cancel" }
+contexts = ["edit", "reorder", "selection", "filter_normal", "filter_prompt", "command_prompt", "date_interface", "project_interface", "tag_interface", "help"]
+help_sections = ["edit", "reorder", "selection", "filter", "date", "project", "tag"]
+footer = { modes = ["edit", "reorder", "selection", "normal_filter", "date_interface", "project_interface", "tag_interface"], text = "Cancel" }
 help = "Cancel"
 readme = "Cancel the current operation and return to normal mode"
