refactor: implement tab-based view architecture
- Add ViewMode::Agenda variant for future agenda view
- Move calendar sidebar rendering to shell level (render.rs)
- Add RenderContext.content_area and sidebar_area for layout split
- Implement tab cycling: Daily -> Filter -> Agenda -> Daily
- Make calendar sidebar toggle global (works from any view)
- Add shared view_content_container_config for unified styling
- Simplify daily.rs and filter.rs (views now fill content_area)
- Update tabs to highlight active view

--- a/src/registry/actions.toml
+++ b/src/registry/actions.toml
@@ -196,7 +196,7 @@ contexts = ["edit"]
 [[action]]
 key_action_id = "toggle_calendar_sidebar"
 default_keys = ["\\"]
-contexts = ["daily_normal"]
+contexts = ["shared_normal"]
 
 [[action]]
 key_action_id = "quit"
