feat: add inline filter prompt with "/" key
- Add InputMode::FilterPrompt for editing filter query in heading
- Press "/" to enter prompt mode with cursor at end of query
- Autocomplete for entry types (!tasks, !notes) and tags (#tag)
- Enter submits query, Escape cancels and restores previous
- Tab accepts autocomplete suggestion and adds space
- Refactor autocomplete.rs to share dropdown rendering logic

--- a/src/registry/actions.toml
+++ b/src/registry/actions.toml
@@ -149,6 +149,11 @@ default_keys = ["tab"]
 contexts = ["daily_normal", "filter_normal"]
 
 [[action]]
+key_action_id = "filter_prompt"
+default_keys = ["/"]
+contexts = ["shared_normal"]
+
+[[action]]
 key_action_id = "toggle_journal"
 default_keys = ["`"]
 contexts = ["shared_normal"]
