feat: add date picker, filter validation, undo for later entries, smooth scroll
- Add quick date picker overlay (\) for fast date navigation
- Keep filter input focused on validation error, don't save invalid queries
- Enable undo for deleted Later entries in daily view
- Change autocomplete from paged to smooth scrolling

--- a/src/registry/actions.toml
+++ b/src/registry/actions.toml
@@ -219,6 +219,11 @@ default_keys = [","]
 contexts = ["shared_normal"]
 
 [[action]]
+key_action_id = "date_picker"
+default_keys = ["\\"]
+contexts = ["daily_normal"]
+
+[[action]]
 key_action_id = "quit"
 default_keys = ["C-q"]
 contexts = ["shared_normal"]
